--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
     <h1>Hello world!</h1>
     <p>This is the first file in my new Git Repo.</p>
+
+    <strong>Important Note:</strong>
 </body>
 
 </html>
