--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
     <p>This is the first file in my new Git Repo.</p>
 
     <strong>Important Note:</strong>
+
+    <ul>
+        <li><a href="http://google.com/">Google</a></li>
+        <li><a href="http://github.com/">GitHub</a></li>
+        <li><a href="http://stackoverflow.com/">Stack Overflow</a></li>
+        <li><a href="http://wikipedia.org/">Wikipedia</a></li>
+        <li><a href="http://reddit.com/">Reddit</a></li>
+    </ul>
 </body>
 
 </html>
