--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
         <li><a href="http://wikipedia.org/">Wikipedia</a></li>
         <li><a href="http://reddit.com/">Reddit</a></li>
     </ul>
+
+    <div><img src="https://www.freecodecamp.org/static/wide-image-becdb4c281c527b989315b2f7ce20378.png"
+            alt="Hello World from Space" style="width:100%;max-width:960px"></div>
 </body>
 
 </html>
