--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <li><a href="http://reddit.com/">Reddit</a></li>
     </ul>
 
-    <div><img src="https://www.freecodecamp.org/static/wide-image-becdb4c281c527b989315b2f7ce20378.png"
+    <div><img src=""
             alt="Hello World from Space" style="width:100%;max-width:960px"></div>
 
     <div><img src="img_hello_git.jpg" alt="Hello Git" style="width:100%;max-width:640px"></div>
